# agentic-sdlc

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-writer.md  reviewer.md  test-specialist.md
.claude/hooks/: session-end.sh  session-start.sh
.claude/skills/sdlc-check/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: README.md
docs/: ARCHITECTURE.md  PLAN.md
gates/: gateset.yaml
reviewers/: correctness.md  security.md  simplicity.md
risk_classifier/: rules.yaml
src/agentic_sdlc/: __init__.py  agent_specs.py  caffeinate.py  cli.py  confidence.py  config.py  contracts.py  gates.py  ledger.py  mcp_server.py  models.py  orchestrator.py  reviewers.py  risk_classifier.py  self_heal.py  service.py
tests/: test_caffeinate.py  test_confidence.py  test_contracts.py  test_gates.py  test_models.py  test_orchestrator.py  test_reviewers.py  test_risk_classifier.py  test_self_heal.py  test_service.py
